修改更多的过滤器

--- a/RCSE-Reloaded.csproj
+++ b/RCSE-Reloaded.csproj
@@ -81,6 +81,7 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="CommonVals.cs" />
     <Compile Include="MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
