--- a/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
+++ b/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="CompilerManager.cs" />
     <Compile Include="ErrorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +69,12 @@
       <DependentUpon>HtmlViewerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IPlugin.cs" />
+    <Compile Include="OutputForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OutputForm.Designer.cs">
+      <DependentUpon>OutputForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -81,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HtmlViewerForm.resx">
       <DependentUpon>HtmlViewerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OutputForm.resx">
+      <DependentUpon>OutputForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
