--- a/RCSE-Reloaded.API/packages.config
+++ b/RCSE-Reloaded.API/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.6.0" targetFramework="net461" />
   <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net461" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net461" />
 </packages>
