--- a/RCSE-Reloaded.csproj
+++ b/RCSE-Reloaded.csproj
@@ -53,6 +53,9 @@
     <ApplicationIcon>rcse.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=2.6.0.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
+      <HintPath>packages\CommandLineParser.2.6.0\lib\net461\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="Common.Log, Version=1.0.0.0, Culture=neutral, PublicKeyToken=9720bde59dbab768, processorArchitecture=MSIL">
       <HintPath>packages\Common.Log.1.0.0.0\lib\net45\Common.Log.dll</HintPath>
     </Reference>
