--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="6.0.0" targetFramework="net461" />
+  <package id="CommandLineParser" version="2.6.0" targetFramework="net461" />
   <package id="Common.Log" version="1.0.0.0" targetFramework="net461" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net461" />
