--- a/packages.config
+++ b/packages.config
@@ -3,10 +3,12 @@
   <package id="AvalonEdit" version="6.0.0" targetFramework="net461" />
   <package id="CommandLineParser" version="2.6.0" targetFramework="net461" />
   <package id="Common.Log" version="1.0.0.0" targetFramework="net461" />
+  <package id="ICSharpCode.NRefactory" version="5.5.1" targetFramework="net461" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net461" />
+  <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net461" />
   <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net461" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net461" />
 </packages>
