--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="CommandLineParser" version="2.6.0" targetFramework="net461" />
   <package id="Common.Log" version="1.0.0.0" targetFramework="net461" />
   <package id="ICSharpCode.NRefactory" version="5.5.1" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net461" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net461" />
