--- a/App.config
+++ b/App.config
@@ -2,6 +2,9 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="RCSE_Reloaded.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   
     <startup> 
@@ -28,4 +31,14 @@
       <appender-ref ref="LogFileAppender" />
     </root>
   </log4net>
+  <userSettings>
+    <RCSE_Reloaded.Properties.Settings>
+      <setting name="UseMainMenu" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="UseLightTheme" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </RCSE_Reloaded.Properties.Settings>
+  </userSettings>
 </configuration>
