RC1 - 完善菜单栏

--- a/App.config
+++ b/App.config
@@ -34,7 +34,7 @@
   <userSettings>
     <RCSE_Reloaded.Properties.Settings>
       <setting name="UseMainMenu" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="UseLightTheme" serializeAs="String">
         <value>False</value>
