--- a/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
+++ b/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
@@ -73,6 +73,12 @@
       <DependentUpon>HtmlViewerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IPlugin.cs" />
+    <Compile Include="NewAbout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewAbout.Designer.cs">
+      <DependentUpon>NewAbout.cs</DependentUpon>
+    </Compile>
     <Compile Include="OutputForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HtmlViewerForm.resx">
       <DependentUpon>HtmlViewerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewAbout.resx">
+      <DependentUpon>NewAbout.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OutputForm.resx">
       <DependentUpon>OutputForm.cs</DependentUpon>
