本地化，高 DPI 优化

--- a/App.config
+++ b/App.config
@@ -9,6 +9,7 @@
   
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 
   <log4net>
@@ -38,6 +39,9 @@
       </setting>
       <setting name="UseLightTheme" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="Language" serializeAs="String">
+        <value>none</value>
       </setting>
     </RCSE_Reloaded.Properties.Settings>
   </userSettings>
