--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="UseLightTheme" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Language" Type="System.String" Scope="User">
+      <Value Profile="(Default)">none</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
