--- a/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
+++ b/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
@@ -73,6 +73,7 @@
       <DependentUpon>HtmlViewerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IPlugin.cs" />
+    <Compile Include="Localization\LangIDHelper.cs" />
     <Compile Include="NewAbout.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,13 +94,25 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ErrorForm.en.resx">
+      <DependentUpon>ErrorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ErrorForm.resx">
+      <DependentUpon>ErrorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ErrorForm.zh-CN.resx">
       <DependentUpon>ErrorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HtmlViewerForm.resx">
       <DependentUpon>HtmlViewerForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NewAbout.en.resx">
+      <DependentUpon>NewAbout.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NewAbout.resx">
+      <DependentUpon>NewAbout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewAbout.zh-CN.resx">
       <DependentUpon>NewAbout.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OutputForm.resx">
