亚克力特效

--- a/App.config
+++ b/App.config
@@ -43,6 +43,9 @@
       <setting name="Language" serializeAs="String">
         <value>none</value>
       </setting>
+      <setting name="UseFluentDesign" serializeAs="String">
+        <value>False</value>
+      </setting>
     </RCSE_Reloaded.Properties.Settings>
   </userSettings>
 </configuration>
