--- a/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
+++ b/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>ErrorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Events.cs" />
+    <Compile Include="FluentService\Transparent.cs" />
     <Compile Include="FolderTree.cs" />
     <Compile Include="HtmlViewerForm.cs">
       <SubType>Form</SubType>
@@ -86,6 +87,7 @@
     <Compile Include="OutputForm.Designer.cs">
       <DependentUpon>OutputForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Panko.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
