--- a/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
+++ b/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
@@ -34,6 +34,12 @@
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>SimpleEditor.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine, Version=2.6.0.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
       <HintPath>..\packages\CommandLineParser.2.6.0\lib\net461\CommandLine.dll</HintPath>
@@ -129,6 +135,7 @@
   <ItemGroup>
     <None Include="app.manifest" />
     <None Include="packages.config" />
+    <None Include="SimpleEditor.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="NetworkServices\Update\" />
