--- a/RCSE-Reloaded.csproj
+++ b/RCSE-Reloaded.csproj
@@ -56,6 +56,12 @@
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>SimpleEditor.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -95,6 +101,7 @@
     <Compile Include="FindDlg.Designer.cs">
       <DependentUpon>FindDlg.cs</DependentUpon>
     </Compile>
+    <Compile Include="Launcher\FormHooks\FormHook.cs" />
     <Compile Include="MeetFileDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -187,6 +194,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SimpleEditor.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
