--- a/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
+++ b/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
@@ -124,5 +124,8 @@
       <Name>CrystalEngine</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SimpleEditor-License.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
