--- a/RCSE-Reloaded.csproj
+++ b/RCSE-Reloaded.csproj
@@ -74,6 +74,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -230,6 +231,7 @@
     <Content Include="rcse.ico" />
     <None Include="Resources\CSfile_6224.png" />
     <None Include="Resources\RCS_csharp.png" />
+    <None Include="Resources\SimpleEditor-License.txt" />
     <Content Include="RibbonMarkup.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -270,17 +272,20 @@
     <PackageReference Include="Common.Log">
       <Version>1.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Download.Client">
+      <Version>1.0.5</Version>
+    </PackageReference>
     <PackageReference Include="ICSharpCode.NRefactory">
       <Version>5.5.1</Version>
+    </PackageReference>
+    <PackageReference Include="LibGit2Sharp">
+      <Version>0.26.2</Version>
     </PackageReference>
     <PackageReference Include="log4net">
       <Version>2.0.8</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Windows.SDK.Contracts">
       <Version>10.0.18362.2005</Version>
-    </PackageReference>
-    <PackageReference Include="Mono.Cecil">
-      <Version>0.11.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
