--- a/CrystalEngine/CrystalEngine.csproj
+++ b/CrystalEngine/CrystalEngine.csproj
@@ -62,11 +62,20 @@
     <Compile Include="Simple\Dialogs\InputBox.Designer.cs">
       <DependentUpon>InputBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Simple\Dialogs\TextDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simple\Dialogs\TextDialog.Designer.cs">
+      <DependentUpon>TextDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Simple\Panko.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Simple\Dialogs\InputBox.resx">
       <DependentUpon>InputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Simple\Dialogs\TextDialog.resx">
+      <DependentUpon>TextDialog.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
