全部代码清理、优化，以及增加自定义搜索

--- a/App.config
+++ b/App.config
@@ -46,6 +46,9 @@
       <setting name="UseFluentDesign" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="SearchURL" serializeAs="String">
+        <value>https://bing.com/search?q=</value>
+      </setting>
     </RCSE_Reloaded.Properties.Settings>
   </userSettings>
 </configuration>
