--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="UseFluentDesign" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SearchURL" Type="System.String" Scope="User">
+      <Value Profile="(Default)">https://bing.com/search?q=</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
