--- a/RCSE-Reloaded.csproj
+++ b/RCSE-Reloaded.csproj
@@ -119,12 +119,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MessageBoxes.resx</DependentUpon>
     </Compile>
-    <Compile Include="MeetFileDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MeetFileDialog.Designer.cs">
-      <DependentUpon>MeetFileDialog.cs</DependentUpon>
-    </Compile>
     <Compile Include="Logger.cs" />
     <Compile Include="LogManager.cs" />
     <Compile Include="MainFrm.cs">
@@ -166,9 +160,6 @@
     <EmbeddedResource Include="MainFrm.zh-Hans.resx">
       <DependentUpon>MainFrm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MeetFileDialog.resx">
-      <DependentUpon>MeetFileDialog.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="MainFrm.en.resx">
       <DependentUpon>MainFrm.cs</DependentUpon>
     </EmbeddedResource>
@@ -194,6 +185,7 @@
     <EmbeddedResource Include="SettingsFrm.resx">
       <DependentUpon>SettingsFrm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include=".editorconfig" />
     <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -239,12 +231,6 @@
       <Project>{ad89a202-e9ac-49f3-8d37-6de09a1b4544}</Project>
       <Name>RCSE-Reloaded.API</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="AdditionalHighlights\Classifier.xshd">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AvalonEdit">
