--- a/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
+++ b/RCSE-Reloaded.API/RCSE-Reloaded.API.csproj
@@ -121,9 +121,7 @@
     <None Include="packages.config" />
     <None Include="SimpleEditor.pfx" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NetworkServices\Update\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\CrystalEngine\CrystalEngine.csproj">
       <Project>{8cb6f6cd-4443-4f63-8670-c388fdb71fcd}</Project>
