--- a/RCSE-Reloaded.csproj
+++ b/RCSE-Reloaded.csproj
@@ -119,15 +119,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MessageBoxes.resx</DependentUpon>
     </Compile>
-    <Compile Include="Logger.cs" />
-    <Compile Include="LogManager.cs" />
     <Compile Include="MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainFrm.Designer.cs">
       <DependentUpon>MainFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ClassifierParser.cs" />
+    <None Include="ClassifierParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RCSEApplication.cs" />
@@ -208,7 +206,6 @@
     <None Include="Resources\CSfile_6224.png" />
     <None Include="Resources\RCS_csharp.png" />
     <None Include="Resources\SimpleEditor-License.txt" />
-    <Content Include="RibbonMarkup.xml" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
